--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <footer class="footer" data-aos="fade-up">
         <p>&copy; 2024 Courseware Addon. Все права защищены.</p>
-        <p>Для получения дополнительной информации, посетите <a href="#">наш сайт</a>.</p>
+        <p>Для получения дополнительной информации, посетите <a href="https://sjgiteam.github.io/SJGITeamWEBPAGE/" target="_blank">наш сайт</a>.</p>
     </footer>
 
     <!-- Плавная анимация с помощью AOS -->
